# rollo

./: .gitignore  Cargo.toml  sdkconfig.defaults
.cargo/: config.toml
src/: axis.rs  board_support.rs  main.rs  web_server.rs  wifi.rs
src/app/build_test/: Cargo.toml  build.rs
src/app/build_test/src/: main.rs
src/app/rollo_app/: Cargo.toml  build.rs
src/app/rollo_app/src/: astronomy.rs  astronomy_api.rs  axis.rs  blinds_controller.rs  board_support.rs  main.rs  network.rs  scheduler.rs  user_settings.rs  web_protocol.rs  web_server.rs  wifi.rs
src/app/rollo_app/src/astronomy_api/: ip_geolocation.rs
src/lib/bal/: Cargo.toml
src/lib/bal/src/: client.rs  lib.rs  networking_types.rs  server.rs  stepper.rs  switch.rs  wifi.rs
src/lib/board_support/: Cargo.toml
src/lib/board_support/src/: lib.rs  wifi.rs
src/lib/bsps/rollo_esp32_board/: Cargo.toml
src/lib/bsps/rollo_esp32_board/src/: client.rs  lib.rs  ping.rs  server.rs
src/lib/bsps/rollo_host_mock_board/: Cargo.toml
src/lib/bsps/rollo_host_mock_board/src/: client.rs  lib.rs  server.rs
