[package]
name = "build_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bal = { path = "../../lib/bal" }
smol = { path = "../../../../esp32/smol" }

[target.xtensa-esp32-espidf.dependencies]
esp-idf-sys = { version = "0.28.1", features = ["binstart"] }
panic-halt = "0.2.0"

[build-dependencies]
embuild = "0.26"

[dependencies.board_support]
path = "../../lib/board_support"
features = ["rollo_host_mock_board"]

[[bin]]
name = "build_test"
path = "src/main.rs"
test = false
bench = false
