
[package]
name = "rollo"
version = "0.1.0"
authors = ["EdBuilds"]
edition = "2018"
categories = ["embedded", ""]
keywords = ["embedded", "svc", "idf", "esp-idf", "esp32"]
description = "A demo binary crate for the ESP32 and ESP-IDF, which connects to WiFi, Ethernet, drives a small HTTP server and draws on a LED screen"
repository = "https://github.com/ivmarkov/rust-esp32-std-demo"
license = "MIT OR Apache-2.0"
readme = "README.md"

[target.xtensa-esp32-espidf.features]
native = ["esp-idf-sys/native"] # Enable this feature for the build to use ESP-IDF native tooling instead of PlatformIO under the hood

[dependencies]
log = "0.4"
embedded-svc = "0.15.4"
nb = "1.0.0"
smol = { version = "1.2.5"}
mutex-trait = "0.2.0"
void = "1.0.2"
fixed = "1.11.0"
typenum = "1.14.0"
num-traits = "0.2.14"
thiserror = "1.0.30"
async-executor = "1.4.1"
serde = "1.0.132"
serde_json = "1.0.73"
arrayvec = "0.7.2"
bal = { path = "../../lib/bal" }
queue = "0.3.2-final"
url = "2.2.2"
time = {version = "0.3.5", features = ["serde-human-readable", "macros", "parsing"]}
[target.xtensa-esp32-espidf.dependencies]
esp-idf-sys = { version = "0.28.1", features = ["binstart", "native"] }
panic-halt = "0.2.0"

[dependencies.board_support]
path = "../../lib/board_support"
features = ["rollo_esp32_board"]

[build-dependencies]
embuild = "0.26"


[[bin]]
name = "rollo"
path = "src/main.rs"
test = false
bench = false
# Future; might be possible once https://github.com/rust-lang/cargo/issues/9096 hits Cargo nightly:
#rust-esp32-ulp-blink = { git = "https://github.com/ivmarkov/rust-esp32-ulp-blink", artifact = "bin" }
