[package]
name = "board_support"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-svc = "0.15.4"
thiserror = "1.0.30"
bal = { path = "../bal" }
rollo_host_mock_board = { path = "../../lib/bsps/rollo_host_mock_board" , optional = true}
rollo_esp32_board = { path = "../../lib/bsps/rollo_esp32_board" , optional = true}

[target.x86_64-unknown-linux-gnu.dependencies]

[target.xtensa-esp32-espidf.dependencies]
