[package]
name = "rollo_esp32_board"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Enable this feature for the build to use ESP-IDF native tooling instead of PlatformIO under the hood
native = ["esp-idf-sys/native"]
experimental = ["esp-idf-svc/experimental", "embedded-svc/experimental"]

[dependencies]
esp-idf-sys = { version = "0.28.1", features = ["binstart"] }
esp-idf-svc = "0.34.1"
esp-idf-hal = "0.29.3"
esp32-hal = "0.3.0"
embedded-svc = "0.15.4"
stepper = "0.5.0"
embedded-time  ="0.12.1"
bal = { path = "../../bal" }
nb = "1.0.0"
void = "1.0.2"
embedded-hal  = "=1.0.0-alpha.4"
fixed = "1.11.0"
num-traits = "0.2.14"
thiserror = "1.0.30"
enumset = "1.0.8"

[dependencies.embedded-hal-stable]
version = "0.2.4"
package = "embedded-hal"
