[package]
name = "rollo_host_mock_board"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-svc = "0.15.4"
void = "1.0.2"
stepper = "0.5.0"
bal = { path = "../../bal" }
fixed = "1.11.0"
num-traits = "0.2.14"
thiserror = "1.0.30"
enumset = "1.0.8"
tide = "0.16.0"
async-std = "1.10.0"
http-types = "2.12.0"
async-trait = "0.1.52"
futures = "0.3.19"
log = "0.4.14"
reqwest = {version = "0.11.8", features= ["blocking"]}

[dependencies.embedded-hal-stable]
version = "0.2.4"
package = "embedded-hal"
